--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,20 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Crimson Sun
-email: youtube.com/nhatcomnhom913
+email: nhatcomnhom@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://crimsonsuntonic.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+linkedin_username: hongnhat-huynhtran-2ab74623b
+display_linkedin_username: HONGNHAT HUYNHTRAN
+youtube_username: nhatcomnhom913
+display_youtube_username: Crimson Sun
+facebook_username: crimsonsun913
+display_facebook_username: Nhật Còm Nhom
+author: Crimson Sun
 
 # Build settings
 # nhatcomnhom remove minama theme for customize
