Revert "add theme file"
This reverts commit 9838cc2df487b917b65e65f7be9f4e97b07bf698.

--- a/_config.yml
+++ b/_config.yml
@@ -30,8 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-# nhatcomnhom remove minama theme for customize
-# theme: minima
+theme: minima
 plugins:
   - jekyll-feed
 
