--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ url: "https://crimsonsuntonic.github.io" # the base hostname & protocol for your
 youtube_username: nhatcomnhom913
 facebook_username:  crimsonsun913
 
+title-logo: /images/title-logo.png
 
 # Build settings
 # theme: minima
