Big update about rendering chord and lyrics function :>

--- a/_data/songs.yml
+++ b/_data/songs.yml
@@ -9,6 +9,7 @@
     I {[C]wonder} how, I {[G]wonder} why,
     I {[Em]wonder} where they {[Am]are}
     The {[F]days} we had, the {[D/F#]songs} we sang {[G]together}, oh, yeah.
+    {[D | |Bm7b13 | Em7 | Am7 | D9sus4 | Gsus4 → G]}
   youtube: "https://www.youtube.com/embed/YGin8rAZ3Mw"
 
 - song_name: "Full Moon"
