--- a/_data/cv_data.yml
+++ b/_data/cv_data.yml
@@ -25,7 +25,7 @@ experience:
     skills: "Android Development, Java, Testing, Git"
     start_date: "Feb 2021"
     end_date: "Sep 2021"
-  - title: "NFC Module Developer for SHARP Smartphones"
+  - title: "NFC Module Developer for Smartphones"
     company: "SHARP(a dispatch worker)"
     description: "Worked on NFC module development for SHARP smartphones."
     skills: "Android Development, Java, Git, Near-field Communication (NFC)"
