--- a/_data/chordsdb/A/minor.yml
+++ b/_data/chordsdb/A/minor.yml
@@ -1,1 +1,10 @@
- 
+- name: "Am"
+  fingers: [
+    [2, 1],
+    [3, 2],
+    [4, 2],
+    [6, 'x']
+  ]
+  barres: []
+  title: "Am"
+  position: 1
