--- a/_data/chordsdb/F/major.yml
+++ b/_data/chordsdb/F/major.yml
@@ -1,1 +1,16 @@
- 
+- name: "F"
+  fingers: [
+    [2, 1],
+    [3, 2],
+    [4, 3],
+    [5, 3]
+  ]
+  barres: [
+    {
+      fromString: 6,
+      toString: 1,
+      fret: 1
+    }
+  ]
+  title: "F"
+  position: 1
