full moon chord lib add

--- a/_data/chordsdb/B/7.yml
+++ b/_data/chordsdb/B/7.yml
@@ -1,1 +1,17 @@
- 
+- name: "B7"
+  fingers: "20212x"
+  barres: []
+  title: "B7"
+  position: 1
+
+- name: "B7(v2)"
+  fingers: "24242x"
+  barres: [
+    {
+      "fret": 2,
+      "fromString": 5,
+      "toString": 1
+    }
+  ]
+  title: "B7"
+  position: 1
