--- a/_data/chordsdb/C/major.yml
+++ b/_data/chordsdb/C/major.yml
@@ -1,21 +1,11 @@
 - name: "C"
-  fingers: [
-    [2, 1],
-    [4, 2],
-    [5, 3]
-  ]
+  fingers: "01023x"
   barres: []
   title: "C"
   position: 1
 
 - name: "C2"
-  fingers: [
-    [1, 3],
-    [2, 3],
-    [3, 3],
-    [4, 3],
-    [5, 3]
-  ]
+  fingers: "35553x"
   barres: [
     {
       fromString: 5,
