--- a/_data/chordsdb/Eb/dim7.yml
+++ b/_data/chordsdb/Eb/dim7.yml
@@ -1,1 +1,17 @@
- 
+- name: "D#dim7"
+  fingers: "2121xx"
+  barres: []
+  title: "D#dim7"
+  position: 1
+
+- name: "D#dim7(v2)"
+  fingers: "13132x"
+  barres: [
+    {
+      fret: 1,
+      fromString: 5,
+      toString: 1
+    }
+  ]
+  title: "D#dim7"
+  position: 5
