--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Crimson Sun
 email: youtube.com/nhatcomnhom913
-description:
+description: A comprehensive resource for guitar chords, song arrangements, and musical knowledge.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://crimsonsuntonic.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 youtube_username: nhatcomnhom913
