add chord database

--- a/_data/chordsdb/Ab/7.yml
+++ b/_data/chordsdb/Ab/7.yml
@@ -1,1 +1,12 @@
- 
+- name: "G#7"
+  fingers: "112131"
+  barres: [
+    {
+      fromString: 6,
+      toString: 1,
+      fret: 1
+    }
+  ]
+  title: "G#7"
+  position: 4
+
