--- a/_data/chordsdb/Db/m7.yml
+++ b/_data/chordsdb/Db/m7.yml
@@ -1,1 +1,17 @@
- 
+- name: "C#m7"
+  fingers: "12131x"
+  barres: [
+    {
+      fromString: 5,
+      toString: 1,
+      fret: 1
+    }
+  ]
+  title: "C#m7"
+  position: 4
+
+- name: "C#m7(v2)"
+  fingers: "00424x"
+  barres: []
+  title: "C#m7"
+  position: 1
