--- a/_data/chordsdb/A/m7.yml
+++ b/_data/chordsdb/A/m7.yml
@@ -9,3 +9,15 @@
   barres: []
   title: "Am7"
   position: 1
+
+- name: "Am7(v3)"
+  fingers: "111131"
+  barres: [
+    {
+      fromString: 6,
+      toString: 1,
+      fret: 1
+    }
+  ]
+  title: "F#m7"
+  position: 5
